--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^14.2.33",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
