--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
