--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^14.2.33",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
