--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-plain-text-renderer": "^17.1.6",
+    "@contentful/rich-text-react-renderer": "^16.1.6",
+    "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.0",
+    "contentful": "^11.10.1",
     "lucide-react": "^0.344.0",
     "next": "^14.2.33",
     "react": "^18",
@@ -21,6 +25,7 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@types/github-slugger": "^1.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
