--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@contentful/rich-text-plain-text-renderer": "^17.1.6",
     "@contentful/rich-text-react-renderer": "^16.1.6",
     "@heroicons/react": "^2.2.0",
+    "@xenova/transformers": "^2.17.2",
     "clsx": "^2.1.0",
     "contentful": "^11.10.1",
     "lucide-react": "^0.344.0",
