--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@next/third-parties": "^16.1.1",
     "@supabase/supabase-js": "^2.89.0",
+    "@vercel/speed-insights": "^1.3.1",
     "@xenova/transformers": "^2.17.2",
     "clsx": "^2.1.0",
     "contentful": "^11.10.1",
